resolved potential NPEs; refs #20082